# embedded_car

./: CMakeLists.txt  Vagrantfile
board_driver/: CMakeLists.txt  TLC59116.c  TLC59116.h  adc.c  adc.h  backup_sram.c  bkpsram.c  bkpsram.h  bootloader.c  bootloader.h  bootloader_protocol.c  bootloader_protocol.h  can.c  can.h  crc.c  crc.h  dac.c  dac.h  flash.c  flash.h  float_print.h  gpio.c  gpio.h  i2c.c  i2c.h  i2c_no_hal.c  i2c_no_hal.h  init.c  init.h  interrupts.c  iwdg.c  iwdg.h  obdii.c  obdii.h  pwm.c  pwm.h  ringbuffer.h  rng.c  rtc.c  rtc.h  (+5 more)
board_driver/usb/: usb.c  usb.h  usbd_cdc_interface.c  usbd_cdc_interface.h
bootloader/: CMakeLists.txt  bootloader.c  bootloader.h  ldscript.ld  main.c  newlib_calls.c
device_driver/: CMakeLists.txt  can_modulator.c  can_modulator.h  uart_driver.c  uart_driver.h  usb_driver.c  usb_driver.h
libs/: CMakeLists.txt
libs/FatFs/: diskio.c  ffconf.h
libs/FatFs/drivers/: sd_diskio.c  sdram_diskio.c
libs/FatFs/option/: cc932.c  cc936.c  cc949.c  cc950.c
libs/FatFs/src/: ffconf.h
libs/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_timebase_tim_template.c
libs/STM32_USB_Device_Library/: CMakeLists.txt
libs/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
nodes/: CMakeLists.txt  interrupts.c  ldscript.c  newlib_calls.c  newlib_calls.h
nodes/ComNode/: CMakeList.txt  CMakeLists.txt  main.c
nodes/bootloader/: CMakeLists.txt  main.c
nodes/com_node/: CMakeLists.txt  main.c  sd.c  telemetry.c
nodes/dashboard/: CMakeLists.txt  main.c
nodes/ecu/: CMakeLists.txt  main.c
nodes/examples/actuator/: CMakeLists.txt  main.c
nodes/examples/adc/: CMakeLists.txt  main.c
nodes/examples/bkpsram/: CMakeLists.txt  main.c
nodes/examples/bootloader/: CMakeLists.txt  main.c
nodes/examples/can/: CMakeLists.txt  main.c  main1.c  main2.c
nodes/examples/crc/: CMakeLists.txt  main.c
nodes/examples/dac/: CMakeLists.txt  main.c
nodes/examples/gear/: CMakeLists.txt  actuator.c  main.c  mainboardtest.c
nodes/examples/gpio/: CMakeLists.txt  main.c
nodes/examples/hbridge/: CMakeLists.txt  main.c
nodes/examples/i2c/: CMakeLists.txt  main.c
nodes/examples/iwdg/: CMakeLists.txt  main.c
nodes/examples/led/: CMakeLists.txt  main.c
nodes/examples/obdii/: CMakeLists.txt  main.c
nodes/examples/rng/: CMakeLists.txt  main.c
nodes/examples/rpm/: CMakeLists.txt  main.c
nodes/examples/rtc/: CMakeLists.txt  main.c
nodes/examples/sd/: CMakeLists.txt  main.c
nodes/examples/spi/: CMakeLists.txt  main.c
nodes/examples/uart/: CMakeLists.txt  main.c
nodes/examples/usb/: CMakeLists.txt  main.c
nodes/examples/water_temp/: CMakeLists.txt  main.c
nodes/examples/xbee/: CMakeLists.txt  main.c
nodes/main_board/: CMakeLists.txt  main.c  sd.c  telemetry.c
nodes/mainboard/: CMakeLists.txt  main.c  sd.c  sd.h  telemetry.c  telemetry.h
nodes/set_clock/: CMakeLists.txt
nodes/traction_control/: CMakeLists.txt  main.c  send_data.c  send_data.h
shield_driver/: CMakeLists.txt
shield_driver/dashboard/: TLC59116.c  TLC59116.h  buttons.h  ea_dogxl160w-7.c  ea_dogxl160w-7.h  gear.h  oil.h  rpm.c  sensor_data.h  steering_wheel_buttons.c  steering_wheel_buttons.h
shield_driver/devboard/: TLC59116.c  TLC59116.h  potmeter.c  potmeter.h
shield_driver/ecu/: ignition.h
shield_driver/mainboard/: actuator.c  actuator.h  current_clamps.c  current_clamps.h  error.h  gear.c  gear.h  gear_feedback.c  gear_feedback.h  ignition_cut.h  neutral.c  oil_pressure.c  oil_pressure.h  power.h  sd.c  sd_bsp.c  sd_setup.c  sd_setup.h  water_temp.c  water_temp.h  wheel_sensor.c  wheel_sensor.h  xbee_dma.c  xbee_dma.h
shield_drivers/: CMakeLists.txt
shield_drivers/com_node/: current_clamps.c  current_clamps.h  error.c  power.c  power.h  sd.c  sd.h  sd_bsp.c  sd_bsp.h  sd_setup.c  water_temperature.c  water_temperature.h  wheel_speed.c  wheel_speed.h
shield_drivers/dashboard/: TLC59116.c  buttons.c  buttons.h  ea_dogxl160w-7.c  gear.c  gear.h  neutral.c  neutral.h  oil.c  oil.h  rpm.c  rpm.h  sensor_data.c  steering_wheel_buttons.c  steering_wheel_buttons.h
shield_drivers/main_board/: actuator.c  actuator.h  error.c  gear.c  gear.h  ignition_cut.c  neutral.h  oil_pressure.c  power.c  sd_setup.c  sd_setup.h  water_temp.c  wheel_sensor.c  xbee.c  xbee.h
shield_drivers/traction_control/: brake.c  brake_pressure.c  brake_pressure.h  clutch.h  current_clamps.c  current_clamps.h  gear.c  gear.h  gear_feedback.c  gear_feedback.h  hbridge.c  hbridge.h  ignition_cut.h  oil_pressure.c  oil_pressure.h  water_temp.c  water_temp.h  wheel_sensor.c  wheel_sensor.h
