add_library(shield_drivers
	#mainboard/sd.c
	#mainboard/sd_setup.c
	mainboard/sd_bsp.c
	mainboard/current_clamps.c
	mainboard/xbee.c
	mainboard/error.c
	mainboard/water_temp.c
	mainboard/wheel_sensor.c
	mainboard/gear_feedback.c
	mainboard/ignition_cut.c
	mainboard/gear.c
	mainboard/oil_pressure.c
	mainboard/neutral.c
	mainboard/actuator.c
	mainboard/current_clamps.c
	mainboard/power.c

	dashboard/buttons.c
	dashboard/steering_wheel_buttons.c
	dashboard/rpm.c
	dashboard/gear.c
	dashboard/oil.c
	dashboard/sensor_data.c
	dashboard/TLC59116.c
	dashboard/ea_dogxl160w-7.c
	dashboard/Fonts/font8.c
	dashboard/Fonts/font12.c
	dashboard/Fonts/font16.c
	dashboard/Fonts/font20.c
	dashboard/Fonts/font24.c

	#com_node/sd.c
	#com_node/sd_setup.c
	#com_node/sd_bsp.c
	#com_node/water_temperature.c
	#com_node/current_clamps.c
	#com_node/wheel_speed.c
	#com_node/xbee.c
	#com_node/error.c

	#com_node/fatfs/diskio.c
	#com_node/fatfs/ff.c
	#com_node/fatfs/ff_gen_drv.c
	#com_node/fatfs/option/cc932.c
	#com_node/fatfs/option/cc936.c
	#com_node/fatfs/option/cc949.c
	#com_node/fatfs/option/cc950.c
	#com_node/fatfs/option/ccsbcs.c
	#com_node/fatfs/option/syscall.c
	#com_node/fatfs/option/unicode.c

	#com_node/fatfs/drivers/sd_diskio.c
	#com_node/fatfs/drivers/sdram_diskio.c
	#com_node/fatfs/drivers/sram_diskio.c
	#com_node/fatfs/drivers/usbh_diskio.c
)

target_link_libraries(shield_drivers
	CMSIS
	STM32f4xx_HAL_Driver
	STM32_USB_Device_Library
	board_driver
	m
)
