add_library(shield_drivers
	#main_board/sd.c
	#main_board/sd_setup.c
	main_board/sd_bsp.c
	main_board/current_clamps.c
	main_board/xbee.c
	main_board/error.c
	main_board/water_temp.c
	main_board/wheel_sensor.c
	main_board/gear_feedback.c
	main_board/ignition_cut.c
	main_board/gear.c
	main_board/oil_pressure.c
	main_board/neutral.c
	main_board/actuator.c
	main_board/current_clamps.c
	main_board/power.c

	dashboard/buttons.c
	dashboard/steering_wheel_buttons.c
	dashboard/rpm.c
	dashboard/gear.c
	dashboard/oil.c
	dashboard/sensor_data.c
	dashboard/TLC59116.c
	dashboard/ea_dogxl160w-7.c
	dashboard/Fonts/font8.c
	dashboard/Fonts/font12.c
	dashboard/Fonts/font16.c
	dashboard/Fonts/font20.c
	dashboard/Fonts/font24.c

	#com_node/sd.c
	#com_node/sd_setup.c
	#com_node/sd_bsp.c
	#com_node/water_temperature.c
	#com_node/current_clamps.c
	#com_node/wheel_speed.c
	#com_node/xbee.c
	#com_node/error.c

	#com_node/fatfs/diskio.c
	#com_node/fatfs/ff.c
	#com_node/fatfs/ff_gen_drv.c
	#com_node/fatfs/option/cc932.c
	#com_node/fatfs/option/cc936.c
	#com_node/fatfs/option/cc949.c
	#com_node/fatfs/option/cc950.c
	#com_node/fatfs/option/ccsbcs.c
	#com_node/fatfs/option/syscall.c
	#com_node/fatfs/option/unicode.c

	#com_node/fatfs/drivers/sd_diskio.c
	#com_node/fatfs/drivers/sdram_diskio.c
	#com_node/fatfs/drivers/sram_diskio.c
	#com_node/fatfs/drivers/usbh_diskio.c
)

target_link_libraries(shield_drivers
	CMSIS
	STM32f4xx_HAL_Driver
	STM32_USB_Device_Library
	board_driver
	m
)
